--- a/.htaccess
+++ b/.htaccess
@@ -1,16 +1,27 @@
 RewriteEngine on
 
+# Add Security Headers
+<IfModule mod_headers.c>
+  Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
+  Header always set X-Frame-Options "SAMEORIGIN"
+  Header always set X-Content-Type-Options "nosniff"
+</IfModule>
+
+# Force pvc-barbed-wire.html redirect
+Redirect 301 /pvc-barbed-wire https://groupnirmal.com/pvc-barbed-wire.html
+
+# Force blog pages redirect to index 
+Redirect 301 /blog-1.html https://groupnirmal.com/
+Redirect 301 /blog-2.html https://groupnirmal.com/
+Redirect 301 /blog-3.html https://groupnirmal.com/
+Redirect 301 /blog-4.html https://groupnirmal.com/
+
 # Redirect direct access to /assets to custom 404 page
 RewriteCond %{REQUEST_URI} ^/assets/?$
 RewriteRule ^ /404.html [R=302,L]
 
 # Error handling
 ErrorDocument 404 /404.html
-
-# Add HSTS header
-<IfModule mod_headers.c>
-  Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
-</IfModule>
 
 # Add Content Security Policy header (single-line format)
 <IfModule mod_headers.c>
